# rtacc

./: .gitignore  build.ps1  go.mod  llvm、clangを介してVisualStudioを必要とせずに、C言語でINtime RTAアプ.md  project.json  rtacc.msi
cmd/rtacc/: main.go
docs/: GO_SETUP.md  RTACC_USAGE.md
docs/Review/: README.md  llvm_ir_1枚説明_スライド.md  rtacc_中間報告_スライド.md
examples/EQtest/: EQtest.IL  EQtest.asm  EQtest.ll  EQtest.rta  main.asm  main.c  main.ll  project.json
examples/GEil/: GEtest.IL  ReadMe.txt  main.c  project.json
examples/IL/: egapi_min.h  il_rtedge_app.h  il_rtedge_egapi.c  il_rtedge_registry.h  il_rtedge_registry_core.c  il_rtedge_slot_bind_egapi.c  il_rtedge_slot_registry.c  il_rtedge_slots_bind.c  main.c  plcp_rtedge_bridge.c  plcp_rtedge_bridge.h  plcp_ton_segment_layout.h  project.json  rtedge_tags.c  rtedge_tags.h  test.ll
examples/IL_XOR/: main.c  project.json
examples/PLCP/: PLCP.vcxproj  PLCP.vcxproj.filters  apif.c  argument.c  basicfunction.c  bitfield.c  bluescreen.c  build_plcp.ps1  comment.c  common.h  config.c  container.c  engine.c  errorlog.c  exception.c  functionblock.c  heap.c  indicate.c  inifile.c  instruction.c  internalclock.c  label.c  literal.c  logic.c  main.c  (+27 more)
examples/rust/rtacc_algorithms/: Cargo.toml  build_ll.ps1  project.json
examples/rust/rtacc_algorithms/.cargo/: config.toml
examples/rust/rtacc_algorithms/src/: lib.rs
installer/: rtacc.msi  rtacc.wxs
llil/: Cargo.toml  README.md  test.IL  test.ll
llst/: Cargo.toml  README.md  invert.ll  invert.st
plcp_rtedge/: Cargo.toml
rtedge/: rtedgelink.c
scripts/: check-rust-path.ps1
(+241 files in other folders)
